# ReinforceLearningIntro

./: LICENSE  README.md  RLHask.cabal  ReinforceLearningIntro.cabal  run.sh  stack.yaml
app/: Main.hs
configs/: Chapter2Bandit.cfg  Chapter3MDP.cfg  Chapter4DP.cfg  Chapter5MC.cfg  Chapter6TD.cfg
solutions/: formulas.tex
solutions/chapter2/: selected-solutions.md
solutions/chapter3/: selected-solutions.md
solutions/chapter4/: selected-solutions.md
solutions/chapter5/: selected-solutions.md
solutions/chapter6/: selected-solutions.md
solutions/formulas/: formulas-chapter2-3.tex  formulas-chapter4.tex  formulas-chapter5.tex  formulas-chapter6.tex  formulas.tex
src/: Chapter2Bandit.hs  Chapter3MDP.hs  Chapter4DP.hs  Chapter5MC.hs  Chapter6TD.hs  Charpter2Bandit.hs  Utils.hs
test/: TestChapter2Bandit.hs  TestChapter3MDP.hs  TestChapter4DP.hs  TestChapter5MC.hs  TestChapter6TD.hs  TestMain.hs
