name:                RLHask
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/peng.pxt@gmail.com/RLHask#readme
license:             BSD3
license-file:        LICENSE
author:              xt
maintainer:          xt@xt.com
copyright:           xt
category:            RL
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Charpter2Bandit
  build-depends:       base >= 4.7 && < 5
                      ,chart >= 1.8.2
  default-language:    Haskell2010

executable RLHask-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , RLHask
  default-language:    Haskell2010

test-suite RLHask-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Test2-1.hs
  build-depends:       base
                     , RLHask
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/peng.pxt@gmail.com/RLHask
