name:                ReinforceLearningIntro
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/Xingtao/ReinforceLearningIntro
license:             BSD3
license-file:        LICENSE
author:              Xingtao
maintainer:          peng.pxt@gmail.com
copyright:           Xingtao
category:            Reinforcement Learning
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Utils
                     , Chapter2Bandit

  build-depends:       base >= 4.7 && < 5
                     , random >= 1.1
                     , lens >= 4.14
                     , MonadRandom >= 0.5
                     , configurator >= 0.3.0.0
                     , HTF >= 0.13.1.0
                     , matplotlib >= 0.5.0
                     , template-haskell >= 2.11.0.0
                     , random-fu >= 0.2.7.0
                     , random-source >= 0.3.0.6

  default-language:    Haskell2010

test-suite RLIntro-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test src
  main-is:             TestMain.hs

  other-modules:       Utils
                      ,Chapter2Bandit
                      ,TestChapter2Bandit
  
  build-depends:       base >= 4.7 && < 5
                     , random >= 1.1
                     , lens >= 4.14
                     , matplotlib >= 0.5.0
                     , configurator >= 0.3.0.0
                     , MonadRandom >= 0.5
                     , template-haskell >= 2.11.0.0
                     , random-fu >= 0.2.7.0
                     , random-source >= 0.3.0.6
  
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
