name:                ReinforceLearningIntro
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/Xingtao/ReinforceLearningIntro
license:             BSD3
license-file:        LICENSE
author:              Xingtao
maintainer:          peng.pxt@gmail.com
copyright:           Xingtao
category:            Reinforcement Learning
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

test-suite RLIntro-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test src
  main-is:             TestMain.hs

  other-modules:       Utils
                     --, Chapter2Bandit
                     , Chapter3MDP
                     , Chapter4DP
                     , Chapter5MC
                     , TestChapter2Bandit
                     , TestChapter3MDP
                     , TestChapter4DP
                     , TestChapter5MC
  
  build-depends:       base >= 4.7 && < 5
                     , random >= 1.1
                     , time >= 1.8.0.2
                     , lens >= 4.14
                     , matplotlib >= 0.5.0
                     , configurator >= 0.3.0.0
                     , MonadRandom >= 0.5
                     , template-haskell >= 2.11.0.0
                     , random-fu >= 0.2.7.0
                     , random-extras >= 0.19
                     , random-source >= 0.3.0.6
                     , text >= 1.2.2.0
                     , hmatrix >= 0.18.1.0
                     , parallel >= 3.2.1.0
                     , transformers >= 0.5.2.0
                     , ascii-progress >= 0.3.3.0
                     , containers >= 0.5.7.1
                     , split >= 0.2.3.2
                     , vector >= 0.12.0.0
  --  -rtsopts -with-rtsopts=-N
  ghc-options:         -threaded 
  default-language:    Haskell2010
